Add minor image instruction changes.

--- a/axa/content.html
+++ b/axa/content.html
@@ -902,7 +902,7 @@
           <ul>
             <li><strong><span class="x-symbol">X</span> accounts:</strong> Type an <span class="x-symbol">X</span> handle including the @. Displays the avatar (if possible, or a placeholder).</li>
             <li><strong>Plain text:</strong> Type any text you want to display. Keep it short.</li>
-            <li><strong>Images (+label):</strong> Paste an image from your clipboard (NOT image URL addresses, actual image data). After pasting image, add an optional custom label.</li>
+            <li><strong>Images (+label):</strong> Paste an image from your clipboard (NOT image URL addresses, actual image data). After pasting image you may add an optional text label. Large images might cause issues with the screen shot feature; if that happens just screen shot manually.</li>
           </ul>
           <li>Labels for columns and rows also editable if you want to make a custom alignment chart (or click
             the <strong>FMK Labels</strong> button for a quick format change).</li>
