--- a/axa/content.html
+++ b/axa/content.html
@@ -466,6 +466,13 @@
       align-items: center;
     }
 
+    .inline-edit.image-edit .custom-image {
+      max-width: 200px;
+      max-height: 200px;
+      width: auto;
+      height: auto;
+    }
+
     .inline-edit.image-edit input {
       width: 100%;
     }
