Update placeholder text in text field input.

--- a/axa/content.html
+++ b/axa/content.html
@@ -2548,7 +2548,7 @@
       const input = document.createElement('input');
       input.type = 'text';
       input.value = current;
-      input.placeholder = 'Start with @ for X handle, or paste image data|label';
+      input.placeholder = 'Type @ X handle, text, or paste image.';
       input.style.width = '100%';
       input.style.boxSizing = 'border-box';
       wrap.style.width = '100%';
